校验时解压，节点不再解压