@@ -2,6 +2,8 @@ package com.example.cae.nodeagent.infrastructure.storage;
 
 import com.example.cae.nodeagent.domain.model.ExecutionContext;
 import com.example.cae.nodeagent.domain.model.InputFileMeta;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
@@ -12,12 +14,15 @@ import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.HashSet;
 import java.util.Locale;
+import java.util.Objects;
 import java.util.Set;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
 @Component
 public class InputFilePrepareService {
+	private static final Logger log = LoggerFactory.getLogger(InputFilePrepareService.class);
+
 	private final PathMappingSupport pathMappingSupport;
 
 	public InputFilePrepareService(PathMappingSupport pathMappingSupport) {
@@ -29,24 +34,49 @@ public class InputFilePrepareService {
 		if (!context.hasInputFiles()) {
 			return;
 		}
+		String validatedTaskDir = null;
 		for (InputFileMeta inputFile : context.getInputFiles()) {
-			if (inputFile.getStoragePath() == null || inputFile.getStoragePath().trim().isEmpty()) {
+			if (inputFile.getUnpackDir() != null && !inputFile.getUnpackDir().isBlank()) {
+				String candidateTaskDir = resolveValidatedTaskDir(inputFile, context.getTaskId());
+				if (validatedTaskDir == null) {
+					validatedTaskDir = candidateTaskDir;
+					context.setTaskDir(candidateTaskDir);
+					log.info("reusing validated unpackDir for taskId={}, taskDir={}", context.getTaskId(), candidateTaskDir);
+				} else if (!Objects.equals(validatedTaskDir, candidateTaskDir)) {
+					throw new IllegalStateException("multiple unpackDir values found for taskId=" + context.getTaskId());
+				}
 				continue;
+			}
+			if (inputFile.getStoragePath() == null || inputFile.getStoragePath().trim().isEmpty()) {
+				throw new IllegalStateException("input file storagePath is empty, taskId=" + context.getTaskId());
 			}
 			String mappedPath = pathMappingSupport.toLinuxPath(inputFile.getStoragePath());
 			File source = new File(mappedPath);
-			if (!source.exists() || source.isDirectory()) {
-				continue;
+			if (!source.exists()) {
+				throw new IllegalStateException("input file not found on node-agent, taskId="
+						+ context.getTaskId()
+						+ ", originalPath=" + inputFile.getStoragePath()
+						+ ", mappedPath=" + mappedPath);
+			}
+			if (source.isDirectory()) {
+				throw new IllegalStateException("input file path points to a directory, taskId="
+						+ context.getTaskId()
+						+ ", originalPath=" + inputFile.getStoragePath()
+						+ ", mappedPath=" + mappedPath);
 			}
 			String targetName = inputFile.getOriginName() == null || inputFile.getOriginName().trim().isEmpty()
 					? source.getName()
 					: inputFile.getOriginName();
 			Path target = Path.of(context.getInputDir(), targetName);
 			try {
-				Files.copy(source.toPath(), target, StandardCopyOption.REPLACE_EXISTING);
+				if (!isSamePath(source.toPath(), target)) {
+					Files.copy(source.toPath(), target, StandardCopyOption.REPLACE_EXISTING);
+					log.info("copied input file for taskId={}, source={}, target={}", context.getTaskId(), source.getAbsolutePath(), target);
+				}
 				if (isZipFile(targetName)) {
 					Path taskDir = extractArchive(target, Path.of(context.getWorkDir()));
 					context.setTaskDir(normalize(taskDir));
+					log.info("extracted archive for taskId={}, archive={}, taskDir={}", context.getTaskId(), target, context.getTaskDir());
 				}
 			} catch (IOException ex) {
 				throw new RuntimeException("copy input file failed: " + source.getAbsolutePath(), ex);
@@ -56,6 +86,23 @@ public class InputFilePrepareService {
 
 	private boolean isZipFile(String fileName) {
 		return fileName != null && fileName.toLowerCase(Locale.ROOT).endsWith(".zip");
+	}
+
+	private String resolveValidatedTaskDir(InputFileMeta inputFile, Long taskId) {
+		Path unpackDir = Path.of(pathMappingSupport.toLinuxPath(inputFile.getUnpackDir())).normalize();
+		if (!Files.exists(unpackDir)) {
+			throw new IllegalStateException("validated unpackDir not found on node-agent, taskId="
+					+ taskId
+					+ ", originalPath=" + inputFile.getUnpackDir()
+					+ ", mappedPath=" + unpackDir);
+		}
+		if (!Files.isDirectory(unpackDir)) {
+			throw new IllegalStateException("validated unpackDir is not a directory, taskId="
+					+ taskId
+					+ ", originalPath=" + inputFile.getUnpackDir()
+					+ ", mappedPath=" + unpackDir);
+		}
+		return normalize(unpackDir);
 	}
 
 	private Path extractArchive(Path archivePath, Path workDir) throws IOException {
@@ -125,5 +172,14 @@ public class InputFilePrepareService {
 		}
 		int idx = path.indexOf('/');
 		return idx < 0 ? path : path.substring(0, idx);
+	}
+
+	private boolean isSamePath(Path source, Path target) throws IOException {
+		Path normalizedSource = source.toAbsolutePath().normalize();
+		Path normalizedTarget = target.toAbsolutePath().normalize();
+		if (Files.exists(normalizedTarget) && Files.isSameFile(normalizedSource, normalizedTarget)) {
+			return true;
+		}
+		return normalizedSource.equals(normalizedTarget);
 	}
 }
